HDRI Preview rendering black if no visible mesh is in the scene and reload scripts gets executed #130054

Closed
opened 2024-11-08 23:40:09 +01:00 by Cedric Steiert · 2 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 566.03

Blender Version
Broken: version: 4.2.3 LTS, branch: blender-v4.2-release, commit date: 2024-10-14 15:20, hash: 0e22e4fcea03
Broken: version: 4.3
Worked: 4.1

Short description of error
The eevee next version of hdri preview spehere render black/grey if no visible mesh is in the scene and scripts get reloaded (system > reload scripts). Adding back a mesh or enabling it's visibility fixes this broken state. Compared to eevee of 4.1 it's a regression in my opinion. This can be quite annoying after a while when debugging extensions.

Exact steps for others to reproduce the error

  • material preview, enable hdri preview
  • hide mesh (default cube)
  • reload scripts
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 566.03 **Blender Version** Broken: version: 4.2.3 LTS, branch: blender-v4.2-release, commit date: 2024-10-14 15:20, hash: `0e22e4fcea03` Broken: version: 4.3 Worked: 4.1 **Short description of error** The eevee next version of hdri preview spehere render black/grey if no visible mesh is in the scene and scripts get reloaded (system > reload scripts). Adding back a mesh or enabling it's visibility fixes this broken state. Compared to eevee of 4.1 it's a regression in my opinion. This can be quite annoying after a while when debugging extensions. <video src="/attachments/b508e6ba-81ff-489e-a271-7e432b0e916c" title="2024-11-08 23-28-11.mkv" controls></video> **Exact steps for others to reproduce the error** - material preview, enable hdri preview - hide mesh (default cube) - reload scripts
Cedric Steiert added the
Status
Needs Triage
Severity
Normal
Type
Bug
labels 2024-11-08 23:40:10 +01:00

I cannot reproduce on Linux + AMD.

@pragma37 can you look at this one?

Even if annoying, given it doesn't crash blender and its a temporary display issue, I don't think this is worth high severity.

I cannot reproduce on Linux + AMD. @pragma37 can you look at this one? Even if annoying, given it doesn't crash blender and its a temporary display issue, I don't think this is worth high severity.
Clément Foucault added
Severity
Normal
and removed
Severity
High
labels 2024-11-11 18:51:38 +01:00
Member

I can repro.
No need to reload scripts.
Removing all objects, switching to Material Preview, and enabling the HDRI Preview is enough.

I can repro. No need to reload scripts. Removing all objects, switching to Material Preview, and enabling the HDRI Preview is enough.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-11-12 21:23:04 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#130054
No description provided.