Fix #130054: HDRI Preview rendering black if no visible mesh is in the scene

Ensure the probes views are set.

Pull Request: https://projects.blender.org/blender/blender/pulls/130190